<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nativeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:text="@string/native_lang"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/learnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="158dp"
            android:text="@string/learning_lang"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dp"
            android:text="@string/edit_username"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/oldPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="360dp"
            android:text="@string/old_pass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editOldPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="390dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="password" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="440dp"
            android:text="@string/new_pass"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="89dp">

            <Spinner
                android:id="@+id/nativeSpinner"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:entries="@array/learnArrayAlt"
                android:prompt="@string/choosePreferred" />

            <Button
                android:id="@+id/settings_prefer_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp"
                android:text="@string/save"
                android:textColor="#fff" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="197dp">

            <Spinner
                android:id="@+id/learnSpinner"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:entries="@array/learnArrayAlt"
                android:prompt="@string/chooseLearn" />

            <Button
                android:id="@+id/settings_learn_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp"
                android:text="@string/save"
                android:textColor="#fff" />
        </RelativeLayout>
        <EditText
            android:id="@+id/editUsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="310dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Username" />

        <EditText
            android:id="@+id/editPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="470dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="password" />
        <Button
            android:id="@+id/settings_save_button"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="530dp"
            android:text="@string/saveall"
            android:background="@color/colorPrimaryDark"
            android:layout_width="250dp"
            android:elevation="4dp"
            android:textColor="#fff"/>
    </RelativeLayout>
</ScrollView>